# ceno-recursion

./: .gitignore  .gitmodules  Cargo.toml  README.md  circ_blocks  encode_ceno.sh  manual_check  output  plotter.py  rust-toolchain.toml  setup.sh  spartan_parallel  test_poseidon.sh  tester.py  v1  verify_ceno.sh
.github/workflows/: ci.yml
circ_blocks/: Cargo.toml  README_zsharp.md  TODO.md  aaa  bbb  ccc  driver.py  rust-toolchain.toml  util.py
circ_blocks/circ_fields/src/: ext_field.rs  ff_field.rs  int_field.rs  lib.rs  test.rs
circ_blocks/circ_hc/: Cargo.toml
circ_blocks/circ_hc/examples/: u32.rs
circ_blocks/circ_hc/src/: lib.rs
circ_blocks/circ_opt/: README.md
circ_blocks/circ_opt/src/: lib.rs
circ_blocks/circ_waksman/src/: lib.rs
circ_blocks/doc/mem/: persistent.tex  (+1 more)
circ_blocks/examples/: circ.rs  cp.rs  opa_bench.rs  zk.rs  zxc.rs  zxi.rs
circ_blocks/scripts/: build_mpc_c_benchmark.zsh  build_mpc_c_test.zsh  build_mpc_zokrates_test.zsh  build_r1cs_c_test.zsh  spartan_zok_test.zsh  test_zok_to_ilp.zsh  zokrates_test.zsh
circ_blocks/src/: cfg.rs  lib.rs
circ_blocks/writeups/: block_merge_split.md  bound_num_proofs.md  feb_23_talk_note.md  memory_construct.md  register_allocation.md  sequence_breaker.md
circ_fields/: Cargo.toml
circ_fields/src/: ext_field.rs  ff_field.rs  lib.rs
circ_opt/src/: lib.rs
docs/: README.md  circ_blocks.md  spartan_parallel.md  spartan_parallel_old.md  zok_format.md
documentations/: circ_blocks.md  spartan_parallel.md  zok_format.md
examples/: circ.rs  zxc.rs  zxi.rs
ff/: Cargo.toml
ff/ff_derive/: Cargo.toml
ff/src/: lib.rs
paper/: application.tex  evalplan.txt  evaluation.tex  introduction.tex  main.tex  references.bib
paper/15893 Project/: abstract.tex  backend.tex  conclusion.tex  fig-backend-overview.tex  fig-continuation-passing.tex  fig-shift-proof.tex  framework.tex  frontend.tex  introduction.tex  main.tex  motivation.tex  preliminaries.tex  references.bib
paper/figures/: fig_benchmark_overview.tex  fig_performance_dt.tex  fig_performance_vm.tex  fig_proof_size.tex  fig_tradeoff.tex
paper/graph/: note.md  note.txt
spartan_parallel/: Cargo.toml  NOTICE.md  README.md
spartan_parallel/.github/workflows/: rust.yml
spartan_parallel/examples/: accumulator.rs  cubic.rs  interface.rs  mem.rs
spartan_parallel/src/: bytes.rs  commitments.rs  custom_dense_mlpoly.rs  dense_mlpoly.rs  errors.rs  group.rs  instance.rs  lib.rs  math.rs  mle.rs  product_tree.rs  r1csinstance.rs  r1csproof.rs  random.rs  sparse_mlpoly.rs  sumcheck.rs  transcript.rs  unipoly.rs
spartan_parallel/src/commitment/: commitment_scheme.rs
spartan_parallel/src/nizk/: bullet.rs  mod.rs
spartan_parallel/src/scalar/: fp.rs  fp2.rs  goldilocks.rs  mod.rs  ristretto255.rs
spartan_parallel/tests/: interface.rs
spartan_parallel/writeups/: eliminate_bounds.md  proofs_folding.md  proofs_overview.md
spartan_parallel/writeups/backend_overview/: main.tex
spartan_parallel/writeups/runtime_comparison/: 2pc_if_return_cc.txt  binary_search_sqrt.txt  bit_reverse_number.txt  elliptic_curve.txt  find_min.txt  mat_mult.txt  sum_of_powers.txt
src/: cfg.rs  lib.rs
src/circify/: mem.rs  mod.rs
src/front/: mod.rs
writeups/: block_merge_split.md  bound_num_proofs.md  feb_16_talk_note.md  memory_construct.md  register_allocation.md  sequence_breaker.md  stack_simulation.md
zok_tests/benchmarks/: 2pc_array.zok  2pc_if_return_cc.input  binary_search_sqrt.zok  binary_search_sqrt_while.input  binary_search_sqrt_while.zok  bit_reverse_number.input  bit_reverse_number.zok  bit_reverse_number_while.zok  ceno_demo.input  ceno_demo.zok  compact_cert.zok  dna_align.input  dna_align.zok  dna_align_cobbl.input  dna_align_cobbl.zok  elliptic_curve.input  elliptic_curve.zok  find_min.input  find_min.zok  find_min_cobbl.input  find_min_cobbl.zok  find_min_ff.zok  find_min_ff_cobbl.input  find_min_ff_cobbl.zok  kmp_search.input  kmp_search.zok  kmp_search_cobbl.input  kmp_search_cobbl.zok  kmp_search_func.zok  mat_mult.input  mat_mult.zok  mat_mult_cobbl.input  mat_mult_cobbl.zok  mat_mult_ff.zok  mat_mult_ff_cobbl.input  mat_mult_ff_cobbl.zok  poseidon.input  poseidon.zok  poseidon_cobbl.input  poseidon_cobbl.zok  (+14 more)
zok_tests/ceno_demo/: Cargo.toml
zok_tests/compact_cert/: Cargo.toml  bit_split.py
zok_tests/compact_cert_field/: Cargo.toml  output
zok_tests/compact_cert_field/src/: curve.rs  field.rs  main.rs  merkle.rs  poseidon.rs  poseidon_constants.rs  poseidon_gen.rs  schnorr.rs
zok_tests/constraints/: 2pc_array.ctk  2pc_bound.ctk  2pc_demo.ctk  2pc_func_call.ctk  2pc_func_simp.ctk  2pc_if_else.ctk  2pc_if_return.ctk  2pc_if_return_cc.ctk  2pc_loop_addition.ctk  2pc_loop_merge.ctk  2pc_mult_func.ctk  2pc_multi_func_call.ctk  2pc_scope_simp.ctk  2pc_test.ctk  binary_search_sqrt.ctk  binary_search_sqrt_while.ctk  bit_reverse_number.ctk  bit_reverse_number_while.ctk  bitwise_xor.ctk  count_ternary_twos.ctk  elliptic_curve.ctk  find_min.ctk  kmp_search.ctk  mat_mult.ctk  multi_func_call.ctk  rle_codec.ctk  sum_of_powers.ctk  sum_of_powers_while.ctk  test.ctk
zok_tests/inputs/: 2pc_array.rtk  2pc_bound.rtk  2pc_demo.rtk  2pc_func_call.rtk  2pc_func_simp.rtk  2pc_if_else.rtk  2pc_if_return.rtk  2pc_if_return_cc.rtk  2pc_loop_addition.rtk  2pc_loop_merge.rtk  2pc_mult_func.rtk  2pc_multi_func_call.rtk  2pc_scope_simp.rtk  2pc_test.rtk  binary_search_sqrt.rtk  binary_search_sqrt_while.rtk  bit_reverse_number.rtk  bit_reverse_number_while.rtk  bitwise_xor.rtk  count_ternary_twos.rtk  kmp_search.rtk  multi_func_call.rtk  rle_codec.rtk  test.rtk
zok_tests/memos/: Liveness_Framework.txt  function_call_scoping_test.txt  function_call_tests.txt  scoping_problem.md  scoping_tests.txt
zok_tests/raw/: dna_align.raw  dna_align_result.raw  find_min.raw  find_min_ff.raw  find_min_ff_result.raw  find_min_result.raw  jolt_result.raw  kmp_search.raw  kmp_search_result.raw  mat_mult.raw  mat_mult_ff.raw  mat_mult_ff_result.raw  mat_mult_result.raw  poseidon.raw  poseidon_result.raw  rle_codec.raw  rle_codec_result.raw  sha256.raw  sha256_result.raw
(+375 files in other folders)
