[package]
name = "spartan_parallel"
version = "0.8.0"
authors = ["Srinath Setty <srinath@microsoft.com>"]
edition = "2021"
description = "High-speed zkSNARKs without trusted setup"
documentation = "https://docs.rs/spartan/"
readme = "README.md"
repository = "https://github.com/microsoft/Spartan"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]

[dependencies]
curve25519-dalek = { version = "4", features = [
  "serde",
  "alloc",
], default-features = false }
merlin = { version = "3", default-features = false }
rand = { version = "0", features = ["getrandom"], default-features = false }
digest = { version = "0", default-features = false }
sha3 = { version = "0", default-features = false }
byteorder = { version = "1", default-features = false }
rayon = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], default-features = false }
bincode = { version = "1", default-features = false }
subtle = { version = "2", features = ["i128"], default-features = false }
zeroize = { version = "1", default-features = false, features = ["alloc"] }
itertools = { version = "0", default-features = false }
colored = { version = "2", default-features = false, optional = true }
flate2 = { version = "1" }
mpcs = { git = "ssh://git@github.com/scroll-tech/ceno.git" }

[dev-dependencies]
criterion = "0"

[lib]
name = "libspartan"
path = "src/lib.rs"

[[bin]]
name = "snark"
path = "profiler/snark.rs"
required-features = ["std"]

[[bin]]
name = "nizk"
path = "profiler/nizk.rs"
required-features = ["std"]

[[bench]]
name = "snark"
harness = false
required-features = ["std"]

[[bench]]
name = "nizk"
harness = false
required-features = ["std"]

[features]
default = ["std"]
std = [
  "digest/std",
  "merlin/std",
  "rand/std",
  "sha3/std",
  "byteorder/std",
  "serde/std",
  "subtle/std",
  "zeroize/std",
  "itertools/use_std",
  "flate2/rust_backend",
]
multicore = ["rayon"]
profile = ["colored"]
