[package]
name = "spartan_parallel"
version = "0.8.0"
authors = ["Srinath Setty <srinath@microsoft.com>"]
edition = "2021"
description = "High-speed zkSNARKs without trusted setup"
documentation = "https://docs.rs/spartan/"
readme = "README.md"
repository = "https://github.com/microsoft/Spartan"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]

[dependencies]
curve25519-dalek = { version = "3.2.1", features = [
    "serde",
    "u64_backend",
    "alloc",
], default-features = false }
merlin = { version = "3.0.0", default-features = false }
rand = { version = "0.7.3", features = ["getrandom"], default-features = false }
digest = { version = "0.8.1", default-features = false }
sha3 = { version = "0.8.2", default-features = false }
byteorder = { version = "1.3.4", default-features = false }
rayon = { version = "1.3.0", optional = true }
serde = { version = "1.0.106", features = ["derive"], default-features = false }
bincode = { version = "1.3.3", default-features = false }
subtle = { version = "2.4", features = ["i128"], default-features = false }
zeroize = { version = "1.5", default-features = false }
itertools = { version = "0.10.0", default-features = false }
colored = { version = "2.0.0", default-features = false, optional = true }
flate2 = { version = "1.0.14" }
ceno-goldilocks = { git = "https://github.com/scroll-tech/ceno-Goldilocks.git", branch = "fix/crate-ready" }
ff = "0.13.0"

[dev-dependencies]
criterion = "0.3.1"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/Jiangkm3/curve25519-dalek.git", branch = "3.2-dependency-fix" }

[lib]
name = "libspartan"
path = "src/lib.rs"

[features]
default = ["std", "simd_backend"]
std = [
    "curve25519-dalek/std",
    "digest/std",
    "merlin/std",
    "rand/std",
    "sha3/std",
    "byteorder/std",
    "serde/std",
    "subtle/std",
    "zeroize/std",
    "itertools/use_std",
    "flate2/rust_backend",
]
simd_backend = ["curve25519-dalek/simd_backend"]
multicore = ["rayon"]
profile = ["colored"]
