[package]
name = "spartan_parallel"
version = "0.8.0"
authors = ["Srinath Setty <srinath@microsoft.com>"]
edition = "2021"
description = "High-speed zkSNARKs without trusted setup"
documentation = "https://docs.rs/spartan/"
readme = "README.md"
repository = "https://github.com/microsoft/Spartan"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]

[dependencies]
curve25519-dalek = { version = "4", features = [
  "serde",
  "alloc",
], default-features = false }
merlin = { version = "3", default-features = false }
rand = { version = "0.8", features = ["getrandom"], default-features = false }
digest = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
byteorder = { version = "1", default-features = false }
rayon = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], default-features = false }
bincode = { version = "1", default-features = false }
subtle = { version = "2", features = ["i128"], default-features = false }
zeroize = { version = "1", default-features = false, features = ["alloc"] }
itertools = { version = "0.13", default-features = false }
colored = { version = "2", default-features = false, optional = true }
flate2 = { version = "1" }
ceno-goldilocks = { git = "https://github.com/scroll-tech/ceno-Goldilocks.git", branch = "fix/crate-ready" }
ff = "0.13.0"

[dev-dependencies]
criterion = "0.5"

[lib]
name = "libspartan"
path = "src/lib.rs"

[features]
default = ["std"]
std = [
  "digest/std",
  "merlin/std",
  "rand/std",
  "sha3/std",
  "byteorder/std",
  "serde/std",
  "subtle/std",
  "zeroize/std",
  "itertools/use_std",
  "flate2/rust_backend",
]
multicore = ["rayon"]
profile = ["colored"]

[[example]]
name = "interface"
required-features = ["multicore", "profile"]
