[package]
name = "compact_cert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_merkle = "1.4"
rand = "0.8"
ff = { version = "0.12", features = ["derive"] }
ff_derive = "0.12"
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = { version = "1.3.3", default-features = false }
primitive-types = "0.12"
rug = "1.26"

[patch.crates-io]
ff = { path = "../../ff" }
ff_derive = { path = "../../ff/ff_derive" }